--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.2",
         "illuminate/contracts": "^10.0||^11.0",
+        "jn-devops/common": "^1.0",
         "spatie/laravel-data": "^4.6",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-package-tools": "^1.16"
