--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": "^8.2",
         "illuminate/contracts": "^10.0||^11.0",
         "jn-devops/common": "^1.0",
+        "lorisleiva/laravel-actions": "^2.8",
         "spatie/laravel-data": "^4.6",
         "spatie/laravel-medialibrary": "^11.5",
         "spatie/laravel-package-tools": "^1.16"
